<resources>
    <string name="app_name">Firebase Class One</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_form_subscribe">Cadastre-se</string>
    <string name="hint_text_email">Digite seu e-mail</string>
    <string name="hint_text_password">Digite sua senha</string>
    <string name="button_subscribe_caption">Cadastrar</string>

    <string name="title_form_login">Account User</string>
    <string name="button_login_caption">Login</string>
    <string name="title_form_login_subscribe">Create a new account</string>
</resources>