<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginActivity"
    android:background="@color/light_gray"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_form_login"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_green_dark"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text_email"
        android:background="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_text_password"
        android:background="@color/white"
        android:padding="15dp"
        android:maxLines="1"
        android:inputType="numberPassword"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/button_login_caption"
        android:textSize="18sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="15dp"
        android:backgroundTint="@android:color/holo_blue_dark"
        android:layout_margin="20dp"
        />

    <TextView
        android:id="@+id/linkToSubscribeForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_form_login_subscribe"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/light_red"
        android:layout_gravity="center"
        />

</LinearLayout>